--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ARGENTINA PROGRAMA</h1>
-    <h2> #YoProgramo 2022</h2>
+    <img src = "logos/APlogo" alt="">
 </body>
 </html>
