--- a/src/index.html
+++ b/src/index.html
@@ -13,5 +13,6 @@
 </head>
 <body class="mat-typography"></body>>
   <app-root></app-root>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
